Publish Astral Repository 1.11.8 for forge-1.20.1