@@ -9,8 +9,8 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.ChestBlockEntity;
-import net.neoforged.neoforge.gametest.GameTestHolder;
-import net.neoforged.neoforge.gametest.PrefixGameTestTemplate;
+import net.minecraftforge.gametest.GameTestHolder;
+import net.minecraftforge.gametest.PrefixGameTestTemplate;
 
 @GameTestHolder("astral_repository")
 @PrefixGameTestTemplate(false)
@@ -22,11 +22,11 @@ public final class ProviderGameTests {
         var chest=(ChestBlockEntity)h.getBlockEntity(local);
         chest.setItem(0,new ItemStack(Items.IRON_INGOT,7));
         var pos=h.absolutePos(local);
-        var old=CompatibilityRegistry.discoverStorage(h.getLevel(),pos,null).getFirst();
+        var old=CompatibilityRegistry.discoverStorage(h.getLevel(),pos,null).get(0);
         h.assertTrue(old.valid(),"Initially discovered capability is valid");
         h.getLevel().invalidateCapabilities(pos);
         h.assertTrue(!old.valid(),"Capability invalidation immediately disables its old provider");
-        var replacement=CompatibilityRegistry.discoverStorage(h.getLevel(),pos,null).getFirst();
+        var replacement=CompatibilityRegistry.discoverStorage(h.getLevel(),pos,null).get(0);
         h.assertTrue(replacement.valid(),"Rediscovery obtains a fresh valid capability");
         h.assertTrue(replacement.snapshot().getOrDefault(new ItemKey(new ItemStack(Items.IRON_INGOT)),0L)==7,"Rediscovery retains the actual stored quantity");
         h.succeed();
