@@ -4,7 +4,7 @@ import com.cappleapple.astralrepository.content.RuneLayout;
 import net.minecraft.core.*;
 import net.minecraft.gametest.framework.*;
 import net.minecraft.world.level.block.Blocks;
-import net.neoforged.neoforge.gametest.*;
+import net.minecraftforge.gametest.*;
 
 @GameTestHolder("astral_repository")
 @PrefixGameTestTemplate(false)
@@ -13,17 +13,17 @@ public final class RuneLayoutGameTests {
     public static void hopperLayersSitOnRayReachableOutlineFaces(GameTestHelper h){
         BlockPos relative=new BlockPos(3,2,3);h.setBlock(relative,Blocks.HOPPER);BlockPos pos=h.absolutePos(relative);
         for(Direction face:Direction.values())verifyCells(h,pos,face,4);
-        var north=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).getFirst();
+        var north=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).get(0);
         h.assertTrue(north.center().y-pos.getY()>=0.625,"Hopper side glyph lies on the outer upper wall, above its recessed funnel");h.succeed();
     }
     @GameTest(templateNamespace="astral_repository",template="empty_workshop")
     public static void narrowContainersBoundTheirGlyphsAndChestBodyPlacementRemainsStable(GameTestHelper h){
         BlockPos relative=new BlockPos(3,2,3);h.setBlock(relative,Blocks.BREWING_STAND);BlockPos pos=h.absolutePos(relative);
         verifyCells(h,pos,Direction.UP,1);verifyCells(h,pos,Direction.NORTH,1);
-        h.assertTrue(RuneLayout.cells(h.getLevel(),pos,Direction.UP,1).getFirst().size()<=0.125,"Brewing stand top glyph fits the narrow physical stem");
+        h.assertTrue(RuneLayout.cells(h.getLevel(),pos,Direction.UP,1).get(0).size()<=0.125,"Brewing stand top glyph fits the narrow physical stem");
         h.setBlock(relative,Blocks.ENCHANTING_TABLE);verifyCells(h,pos,Direction.NORTH,4);verifyCells(h,pos,Direction.UP,4);
         h.setBlock(relative,Blocks.CHEST);verifyCells(h,pos,Direction.NORTH,4);
-        double height=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).getFirst().center().y-pos.getY();
+        double height=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).get(0).center().y-pos.getY();
         h.assertTrue(height>0.25&&height<0.4,"Chest side runes remain on the lower body below the moving lid");h.succeed();
     }
     @GameTest(templateNamespace="astral_repository",template="empty_workshop")
@@ -31,7 +31,7 @@ public final class RuneLayoutGameTests {
         BlockPos relative=new BlockPos(3,2,3);h.setBlock(relative,Blocks.BARREL);BlockPos pos=h.absolutePos(relative);
         double[][][] expected={{{0,0}},{{-.5,0},{.5,0}},{{0,.5},{-.5,-.5},{.5,-.5}},{{-.5,.5},{.5,.5},{-.5,-.5},{.5,-.5}}};
         for(Direction face:Direction.values()){
-            var single=RuneLayout.cells(h.getLevel(),pos,face,1).getFirst();double size=single.size();
+            var single=RuneLayout.cells(h.getLevel(),pos,face,1).get(0);double size=single.size();
             for(int count=1;count<=4;count++){
                 var cells=RuneLayout.cells(h.getLevel(),pos,face,count);h.assertTrue(cells.size()==count,"Visible layer count matches placement");
                 for(int i=0;i<count;i++){
@@ -45,7 +45,7 @@ public final class RuneLayoutGameTests {
             }
         }
         h.setBlock(relative,Blocks.CHEST);
-        var center=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).getFirst();
+        var center=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,1).get(0);
         for(int count=1;count<=4;count++){
             var cells=RuneLayout.cells(h.getLevel(),pos,Direction.NORTH,count);
             for(int i=0;i<count;i++){
